# potplayer-whisper-proxy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
installer/: Cargo.toml  whisper-proxy.ini.template
installer/src/: main.rs
proxy/: Cargo.toml
proxy/src/: config.rs  ipc.rs  main.rs  whisper_client.rs
scripts/: README.md
